
PIG-3444: CONCAT with 2+ input parameters fail (lbendig via daijy)

PIG-3529: Upgrade HBase dependency from 0.95-SNAPSHOT to 0.96 (jarcec via daijy)

PIG-3117: A debug mode in which pig does not delete temporary files (ihadanny via cheolsoo)

PIG-3484: Make the size of pig.script property configurable (cheolsoo)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-3726: Ranking empty records leads to NullPointerException (jarcec via daijy)

PIG-3652: Pigmix parser (PigPerformanceLoader) deletes chars during parsing (keren3000 via daijy)

PIG-3722: Udf deserialization for registered classes fails in local_mode (aniket486)

PIG-3641: Split "otherwise" producing incorrect output when combined with ColumnPruning (knoguchi)

PIG-3682: mvn-inst target does not install pig-h2.jar into local .m2 (raluri via aniket486)

PIG-3661: Piggybank AvroStorage fails if used in more than one load or store statement (rohini)

PIG-3511: Security: Pig temporary directories might have world readable permissions (rohini)

PIG-3664: Piggy Bank XPath UDF can't be called (nezihyigitbasi via daijy)

PIG-3662: Static loadcaster in BinStorage can cause exception (lbendig via rohini)

PIG-3657: New partition filter extractor fails with NPE (cheolsoo)

PIG-3617: problem with temp file deletion in MAPREDUCE operator (nezihyigitbasi via cheolsoo)

PIG-3649: POPartialAgg incorrectly calculates size reduction when multiple values aggregated (tmwoodruff via daijy)

PIG-3650: Fix for PIG-3100 breaks column pruning (tmwoodruff via daijy)

PIG-3643: Nested Foreach with UDF and bincond is broken (cheolsoo)

PIG-3616: TestBuiltIn.testURIwithCurlyBrace() silently fails (lbendig via cheolsoo)

PIG-3608: ClassCastException when looking up a value from AvroMapWrapper using a Utf8 key (rding)

PIG-3639: TestRegisteredJarVisibility is broken in trunk (cheolsoo)

PIG-3640: Retain intermediate files for debugging purpose in batch mode (cheolsoo)
