@@ -87,6 +87,8 @@ OPTIMIZATIONS
  
 BUG FIXES
 
+PIG-3744: SequenceFileLoader does not support BytesWritable (rohini)
+
 PIG-3726: Ranking empty records leads to NullPointerException (jarcec via daijy)
 
 PIG-3652: Pigmix parser (PigPerformanceLoader) deletes chars during parsing (keren3000 via daijy)
